--- a/package.json
+++ b/package.json
@@ -13,35 +13,31 @@
     "lint:prod": "eslint . --ext .ts --ignore-path .gitignore --max-warnings 0"
   },
   "dependencies": {
-    "@ethersproject/abi": "^5.6.4",
+    "@ethersproject/abi": "^5.6.1",
     "@subsquid/archive-registry": "^0.0.6",
-    "@subsquid/cli": "^0.4.1",
-    "@subsquid/evm-typegen": "^0.1.0",
-    "@subsquid/graphql-server": "^0.3.0",
+    "@subsquid/cli": "^0.2.3",
+    "@subsquid/evm-typegen": "^0.0.1",
+    "@subsquid/graphql-server": "^0.1.5",
     "@subsquid/ss58": "^0.1.0",
-    "@subsquid/substrate-evm-processor": "^0.0.6",
-    "@subsquid/substrate-processor": "^0.8.0",
-    "dotenv": "^16.0.1",
-    "ethers": "^5.6.9",
-    "moralis-web3-providers-ws": "^0.0.1-security",
+    "@subsquid/substrate-evm-processor": "^0.0.4",
+    "@subsquid/substrate-processor": "^0.7.0",
+    "dotenv": "^16.0.0",
+    "ethers": "^5.6.4",
     "pg": "^8.7.3",
-    "typeorm": "^0.2.41",
-    "web3": "^1.7.4",
-    "web3-providers-ws": "^1.7.4"
+    "typeorm": "^0.2.41"
   },
   "devDependencies": {
-    "@subsquid/substrate-metadata-explorer": "^0.0.8",
-    "@subsquid/substrate-typegen": "^0.5.0",
-    "@types/node": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.29.0",
-    "eslint": "^8.18.0",
-    "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-prettier": "^8.5.0",
+    "@subsquid/substrate-metadata-explorer": "^0.0.7",
+    "@subsquid/substrate-typegen": "^0.4.0",
+    "@types/node": "^17.0.23",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-prettier": "^4.1.0",
-    "eslint-plugin-type-graphql": "^1.0.0",
-    "typescript": "^4.7.4",
-    "yarn-upgrade-all": "^0.7.1"
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-type-graphql": "^0.3.2",
+    "typescript": "~4.6.2"
   }
 }
