--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "dotenv": "^16.0.0",
     "ethers": "^5.6.4",
     "pg": "^8.7.3",
-    "typeorm": "^0.2.41"
+    "typeorm": "^0.2.41",
+    "web3-providers-ws": "^1.7.4"
   },
   "devDependencies": {
     "@subsquid/substrate-metadata-explorer": "^0.0.7",
