--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@subsquid/ss58": "^0.1.0",
     "@subsquid/substrate-evm-processor": "^0.0.4",
     "@subsquid/substrate-processor": "^0.7.0",
+    "axios": "^0.27.2",
     "dotenv": "^16.0.0",
     "ethers": "^5.6.4",
     "pg": "^8.7.3",
